--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MyMovieAppXML"
         tools:targetApi="31">
         <activity
-            android:name=".view.MainActivity2"
+            android:name=".view.MainFragment2"
             android:exported="true" />
         <activity
             android:name=".view.MainActivity"
